deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cvsm
  labels:
    app.kubernetes.io/name: cvsm
